# OOP-MAI

./: CMakeLists.txt  README.md  fun.cpp  fun.h  main.cpp  tests.cpp
